# chess-coach

./: .gitignore  main.py  pyproject.toml
data/: label_names.json  leela_vectors.npy  positions.json  sf8_labels.npy
docs/: eval_plan.md
examples/: immortal_game.pgn
models/svm/: bishops_black.joblib  bishops_white.joblib  king_safety_black.joblib  king_safety_white.joblib  knights_black.joblib  knights_white.joblib  metadata.json  mobility_black.joblib  mobility_white.joblib  passed_pawns_black.joblib  passed_pawns_white.joblib  queens_black.joblib  rooks_black.joblib  rooks_white.joblib  scaler.joblib  space_black.joblib  space_white.joblib  threats_black.joblib  threats_white.joblib
src/: analyze_demo.py  commentary_generator.py  concept_extractor.py  concept_labeler.py  leela_encoder.py  leela_explorer.py  main.py  onnx_modifier.py  opening_book.py  position_analyzer.py  prepare_training_data.py  tablebase.py  tactical_detector.py  test_leela.py  train_svm.py
web/: server.py
web/static/: index.html
