[project]
name = "chessy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.79.0",
    "chess>=1.11.2",
    "fastapi>=0.128.6",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
